Fix some low hanging lintian warnings
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16172 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.headers.featureset.in
+++ b/linux-2.6/debian/templates/control.headers.featureset.in
@@ -1,4 +1,5 @@
 Package: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@
+Depends: ${misc:Depends}
 Description: Common header files for Linux @upstreamversion@@abiname@@localversion_headers@
  This package provides the architecture-specific common kernel header files
  for Linux kernel version @upstreamversion@@abiname@@localversion_headers@, generally used for building out-of-tree
