--- a/linux-2.6/debian/templates/control.image-dbg.in
+++ b/linux-2.6/debian/templates/control.image-dbg.in
@@ -1,4 +1,5 @@
 Package: linux-image-@upstreamversion@@abiname@@localversion@-dbg
+Depends: linux-image-@upstreamversion@@abiname@@localversion@, ${misc:Depends}
 Section: debug
 Priority: extra
 Description: Debugging infos for Linux @upstreamversion@@abiname@@localversion@
