--- a/linux-2.6/debian/templates/control.image.type-modulesextra.in
+++ b/linux-2.6/debian/templates/control.image.type-modulesextra.in
@@ -1,11 +1,11 @@
 Package: linux-image-@upstreamversion@@abiname@@localversion@
 Provides: linux-image, linux-image-@major@
-Depends: linux-modules-@upstreamversion@@abiname@@localversion@ (= ${binary:Version})
+Depends: linux-modules-@upstreamversion@@abiname@@localversion@ (= ${binary:Version}), ${misc:Depends}
 Suggests: linux-doc-@version@
 Description: Linux @upstreamversion@ for @class@
  The Linux kernel @upstreamversion@ for use on @longclass@.
 
 Package: linux-modules-@upstreamversion@@abiname@@localversion@
-Depends: module-init-tools
+Depends: module-init-tools, ${misc:Depends}
 Description: Linux @upstreamversion@ modules for @class@
  Modules for Linux kernel @upstreamversion@ for use on @longclass@.
