--- a/linux-2.6/debian/templates/control.image.type-modulesinline.in
+++ b/linux-2.6/debian/templates/control.image.type-modulesinline.in
@@ -1,6 +1,6 @@
 Package: linux-image-@upstreamversion@@abiname@@localversion@
 Provides: linux-image, linux-image-@major@, linux-modules-@upstreamversion@@abiname@@localversion@
-Depends: module-init-tools
+Depends: module-init-tools, ${misc:Depends}
 Suggests: linux-doc-@version@
 Description: Linux @upstreamversion@ for @class@
  The Linux kernel @upstreamversion@ for use on @longclass@.
