--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -14,7 +14,7 @@ Package: linux-source-@version@
 Architecture: all
 Section: kernel
 Provides: linux-source, linux-source-@major@
-Depends: binutils, bzip2
+Depends: binutils, bzip2, ${misc:Depends}
 Recommends: libc6-dev | libc-dev, gcc, make
 Suggests: libncurses-dev | ncurses-dev, kernel-package, libqt3-mt-dev
 Description: Linux kernel source for version @version@ with Debian patches
@@ -31,6 +31,7 @@ Description: Linux kernel source for version @version@ with Debian patches
 
 Package: linux-doc-@version@
 Architecture: all
+Depends: ${misc:Depends}
 Section: doc
 Provides: linux-doc-@major@
 Description: Linux kernel specific documentation for version @version@
@@ -43,6 +44,7 @@ Description: Linux kernel specific documentation for version @version@
 
 Package: linux-manual-@version@
 Architecture: all
+Depends: ${misc:Depends}
 Section: doc
 Provides: linux-manual, kernel-manual-@major@
 Conflicts: linux-manual, kernel-manual-@major@
@@ -59,7 +61,7 @@ Description: Linux kernel API manual pages for version @version@
 
 Package: linux-patch-debian-@version@
 Architecture: all
-Depends: bzip2, linux-support-@upstreamversion@@abiname@, python
+Depends: bzip2, linux-support-@upstreamversion@@abiname@, python, ${misc:Depends}
 Suggests: linux-source-@version@
 Description: Debian patches to version @version@ of the Linux kernel
  This package includes the patches used to produce the prepackaged
@@ -72,6 +74,7 @@ Description: Debian patches to version @version@ of the Linux kernel
 
 Package: firmware-linux-free
 Architecture: all
+Depends: ${misc:Depends}
 Description: Binary firmware for various drivers in the Linux kernel
  This package contains firmware which was previously included in the
  Linux kernel and which is compliant with the Debian Free Software
@@ -83,7 +86,7 @@ Description: Binary firmware for various drivers in the Linux kernel
 Package: linux-support-@upstreamversion@@abiname@
 Architecture: all
 Section: devel
-Depends: ${python:Depends}
+Depends: ${python:Depends}, ${misc:Depends}
 Description: Support files for Linux @upstreamversion@
  This package provides support files for the Linux kernel build,
  e.g. scripts to handle ABI information and for generation of
