--- a/linux-2.6/debian/templates/control.headers.arch.in
+++ b/linux-2.6/debian/templates/control.headers.arch.in
@@ -1,12 +1,13 @@
 Package: linux-headers-@upstreamversion@@abiname@-all
-Depends: linux-headers-@upstreamversion@@abiname@-all-${kernel:Arch} (= ${binary:Version})
-Description: All header files for Linux @version@
+Depends: linux-headers-@upstreamversion@@abiname@-all-${kernel:Arch} (= ${binary:Version}), ${misc:Depends}
+Description: All header files for Linux @version@ (meta-package)
  This package depends against all architecture-specific kernel header files
  for Linux kernel version @upstreamversion@, generally used for building out-of-tree
  kernel modules.
 
 Package: linux-headers-@upstreamversion@@abiname@-all-@arch@
-Description: All header files for Linux @version@
+Depends: ${misc:Depends}
+Description: All header files for Linux @version@ (meta-package)
  This package depends against all architecture-specific kernel header files
  for Linux kernel version @upstreamversion@, generally used for building out-of-tree
  kernel modules.
