--- a/linux-2.6/debian/templates/control.headers.in
+++ b/linux-2.6/debian/templates/control.headers.in
@@ -1,5 +1,5 @@
 Package: linux-headers-@upstreamversion@@abiname@@localversion@
-Depends: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@ (= ${binary:Version}), linux-kbuild-@version@
+Depends: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@ (= ${binary:Version}), linux-kbuild-@version@, ${misc:Depends}
 Provides: linux-headers, linux-headers-@major@
 Description: Header files for Linux @upstreamversion@@abiname@@localversion@
  This package provides the architecture-specific kernel header files
