--- a/linux-2.6/debian/templates/control.libc-dev.in
+++ b/linux-2.6/debian/templates/control.libc-dev.in
@@ -1,5 +1,6 @@
 Package: linux-libc-dev
 Section: devel
+Depends: ${misc:Depends}
 Provides: linux-kernel-headers
 Replaces: linux-kernel-headers
 Conflicts: linux-kernel-headers
