--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1101,6 +1101,12 @@ CONFIG_RAMZSWAP=m
 CONFIG_RAMZSWAP_STATS=y
 
 ##
+## file: drivers/staging/brcm0211/Kconfig
+##
+CONFIG_BRCM80211=m
+CONFIG_BRCM80211_PCI=y
+
+##
 ## file: drivers/staging/rtl8187se/Kconfig
 ##
 CONFIG_R8187SE=m
