--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1095,10 +1095,10 @@ CONFIG_POHMELFS=m
 CONFIG_POHMELFS_CRYPTO=y
 
 ##
-## file: drivers/staging/ramzswap/Kconfig
+## file: drivers/staging/zram/Kconfig
 ##
-CONFIG_RAMZSWAP=m
-CONFIG_RAMZSWAP_STATS=y
+CONFIG_ZRAM=m
+CONFIG_ZRAM_STATS=y
 
 ##
 ## file: drivers/staging/brcm0211/Kconfig
