--- a/linux-2.6/debian/config/hppa/config
+++ b/linux-2.6/debian/config/hppa/config
@@ -590,7 +590,7 @@ CONFIG_ROOT_NFS=y
 ##
 ## file: lib/Kconfig.debug
 ##
-# CONFIG_DETECT_SOFTLOCKUP is not set
+# CONFIG_LOCKUP_DETECTOR is not set
 
 ##
 ## file: mm/Kconfig
