--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -675,6 +675,7 @@ CONFIG_SERIO_ALTERA_PS2=m
 ##
 CONFIG_TOUCHSCREEN_ADS7846=m
 CONFIG_TOUCHSCREEN_AD7877=m
+CONFIG_TOUCHSCREEN_AD7879=m
 CONFIG_TOUCHSCREEN_AD7879_I2C=m
 CONFIG_TOUCHSCREEN_DYNAPRO=m
 CONFIG_TOUCHSCREEN_HAMPSHIRE=m
