--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -90,6 +90,8 @@ CONFIG_IO_DELAY_0X80=y
 # CONFIG_DEBUG_BOOT_PARAMS is not set
 # CONFIG_CPA_DEBUG is not set
 CONFIG_OPTIMIZE_INLINING=y
+# CONFIG_X86_DECODER_SELFTEST is not set
+# CONFIG_DEBUG_STRICT_USER_COPY_CHECKS is not set
 
 ##
 ## file: arch/x86/kernel/cpu/cpufreq/Kconfig
@@ -127,6 +129,7 @@ CONFIG_ACPI_PROCFS=y
 # CONFIG_ACPI_PROCFS_POWER is not set
 CONFIG_ACPI_POWER_METER=m
 CONFIG_ACPI_SYSFS_POWER=y
+# CONFIG_ACPI_EC_DEBUGFS is not set
 # CONFIG_ACPI_PROC_EVENT is not set
 CONFIG_ACPI_AC=m
 CONFIG_ACPI_BATTERY=m
@@ -147,6 +150,7 @@ CONFIG_ACPI_HED=m
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_GHES=m
 # CONFIG_ACPI_APEI_EINJ is not set
+# CONFIG_ACPI_APEI_ERST_DEBUG is not set
 
 ##
 ## file: drivers/ata/Kconfig
