--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -539,9 +539,9 @@ CONFIG_BLK_DEV_TRM290=m
 CONFIG_XEN_KBDDEV_FRONTEND=y
 
 ##
-## file: drivers/indle/Kconfig
+## file: drivers/idle/Kconfig
 ##
-CONFIG_INTEL_IDLE=m
+# CONFIG_INTEL_IDLE is not set
 
 ##
 ## file: drivers/input/gameport/Kconfig
