--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1911,9 +1911,14 @@ CONFIG_RT2400PCI=m
 CONFIG_RT2500PCI=m
 CONFIG_RT61PCI=m
 CONFIG_RT2800PCI=m
+CONFIG_RT2800PCI_RT30XX=y
+# CONFIG_RT2800PCI_RT35XX is not set
 CONFIG_RT2500USB=m
 CONFIG_RT73USB=m
 CONFIG_RT2800USB=m
+CONFIG_RT2800USB_RT30XX=y
+# CONFIG_RT2800USB_RT35XX is not set
+# CONFIG_RT2800USB_UNKNOWN is not set
 # CONFIG_RT2X00_DEBUG is not set
 
 ##
