--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -841,6 +841,22 @@ CONFIG_DAB=y
 CONFIG_USB_DABUSB=m
 
 ##
+## file: drivers/media/IR/Kconfig
+##
+CONFIG_IR_CORE=m
+CONFIG_RC_MAP=m
+CONFIG_IR_NEC_DECODER=m
+CONFIG_IR_RC5_DECODER=m
+CONFIG_IR_RC6_DECODER=m
+CONFIG_IR_JVC_DECODER=m
+CONFIG_IR_SONY_DECODER=m
+CONFIG_IR_LIRC_CODEC=m
+CONFIG_IR_IMON=m
+CONFIG_IR_MCEUSB=m
+CONFIG_IR_ENE=m
+CONFIG_IR_STREAMZAP=m
+
+##
 ## file: drivers/media/common/tuners/Kconfig
 ##
 CONFIG_MEDIA_ATTACH=y
