--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1148,6 +1148,13 @@ CONFIG_RTL8192SU=m
 CONFIG_RTL8192U=m
 
 ##
+## file: drivers/staging/tm6000/Kconfig
+##
+CONFIG_VIDEO_TM6000=m
+CONFIG_VIDEO_TM6000_ALSA=m
+CONFIG_VIDEO_TM6000_DVB=m
+
+##
 ## file: drivers/staging/usbip/Kconfig
 ##
 CONFIG_USB_IP_COMMON=m
