--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -1,14 +1,10 @@
 Package: linux-tools-@version@
 Architecture: alpha amd64 armel hppa i386 powerpc s390 sh4 sparc sparc64
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: linux-base (>= 2.6.32-16)
+Depends: ${shlibs:Depends}, ${misc:Depends}, linux-base (>= 2.6.32-16)
 Suggests: linux-doc-@version@
 Description: Performance analysis tools for Linux @upstreamversion@
  This package contains the 'perf' performance analysis tools for Linux
  kernel version @upstreamversion@.
- .
- The linux-base package contains a 'perf' command which will invoke the
- appropriate version for the running kernel.
 
 Package: linux-source-@version@
 Architecture: all
@@ -97,5 +93,5 @@ Architecture: all
 Depends: libuuid-perl, ${misc:Depends}, util-linux (>= 2.16-1) | udev (<< 146-1)
 Description: Linux image base package
  This package contains files and support scripts for all Linux
- images.
+ images and for the 'perf' tools.
 
