--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -1,6 +1,6 @@
 Package: linux-tools-@version@
 Architecture: alpha amd64 armel hppa i386 powerpc s390 sh4 sparc sparc64
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}, ${python:Depends}
 Recommends: linux-base (>= 2.6.32-16)
 Suggests: linux-doc-@version@
 Description: Performance analysis tools for Linux @upstreamversion@
