Enable PM_ADVANCED_DEBUG (Closes: #603254)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16559 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3499,7 +3499,7 @@ CONFIG_HZ_250=y
 ##
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
-# CONFIG_PM_ADVANCED_DEBUG is not set
+CONFIG_PM_ADVANCED_DEBUG=y
 # CONFIG_PM_VERBOSE is not set
 CONFIG_SUSPEND=y
 CONFIG_HIBERNATION=y
