--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1803,9 +1803,10 @@ CONFIG_HDLC_RAW_ETH=m
 CONFIG_HDLC_CISCO=m
 CONFIG_HDLC_FR=m
 CONFIG_HDLC_PPP=m
-CONFIG_HDLC_X25=m
+# CONFIG_HDLC_X25 is not set
 # CONFIG_PC300TOO is not set
 CONFIG_WAN_ROUTER_DRIVERS=m
+# CONFIG_CYCLOMX_X25 is not set
 
 ##
 ## file: drivers/net/wimax/i2400m/Kconfig
@@ -4182,6 +4183,11 @@ CONFIG_WIRELESS_EXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
 CONFIG_LIB80211=m
 # CONFIG_LIB80211_DEBUG is not set
+
+##
+## file: net/x25/Kconfig
+##
+# CONFIG_X25 is not set
 
 ##
 ## file: net/xfrm/Kconfig
