Disable Econet protocol
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16566 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3770,6 +3770,11 @@ CONFIG_IP_DCCP_CCID3_RTO=100
 # CONFIG_NET_DSA is not set
 
 ##
+## file: net/econet/Kconfig
+##
+# CONFIG_NET_ECONET is not set
+
+##
 ## file: net/ieee802154/Kconfig
 ##
 CONFIG_IEEE802154=m
