--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3444,6 +3444,7 @@ CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
+# CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_EMBEDDED is not set
