Explicitly disable ECONET (not the nonexistent NET_ECONET)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16628 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3773,7 +3773,7 @@ CONFIG_IP_DCCP_CCID3_RTO=100
 ##
 ## file: net/econet/Kconfig
 ##
-# CONFIG_NET_ECONET is not set
+# CONFIG_ECONET is not set
 
 ##
 ## file: net/ieee802154/Kconfig
