Explicitly set CONFIG_VGA_ARB_MAX_GPUS=16 (default)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16630 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -416,6 +416,7 @@ CONFIG_DRM_I2C_CH7006=m
 ## file: drivers/gpu/vga/Kconfig
 ##
 CONFIG_VGA_SWITCHEROO=y
+CONFIG_VGA_ARB_MAX_GPUS=16
 
 ##
 ## file: drivers/hid/usbhid/Kconfig
