Explicitly set MMC_BLOCK_MINORS=8 (default)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16631 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1436,6 +1436,7 @@ CONFIG_EEPROM_93CX6=m
 ##
 ## file: drivers/mmc/card/Kconfig
 ##
+CONFIG_MMC_BLOCK_MINORS=8
 CONFIG_MMC_BLOCK_BOUNCE=y
 CONFIG_SDIO_UART=m
 # CONFIG_MMC_TEST is not set
