Explicitly disable NFS_USE_NEW_IDMAPPER (default)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16632 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3189,6 +3189,7 @@ CONFIG_NFS_V4=y
 # CONFIG_NFS_V4_1 is not set
 CONFIG_NFS_FSCACHE=y
 # CONFIG_NFS_USE_LEGACY_DNS is not set
+# CONFIG_NFS_USE_NEW_IDMAPPER is not set
 
 ##
 ## file: fs/nfsd/Kconfig
