9p: Enable 9P_FS_POSIX_ACL
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16633 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2896,6 +2896,7 @@ CONFIG_NETWORK_FILESYSTEMS=y
 ##
 CONFIG_9P_FS=m
 CONFIG_9P_FSCACHE=y
+CONFIG_9P_FS_POSIX_ACL=y
 
 ##
 ## file: fs/adfs/Kconfig
