netfilter: Enable IP_VS_PE_SIP
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16635 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4051,6 +4051,7 @@ CONFIG_IP_VS_SH=m
 CONFIG_IP_VS_SED=m
 CONFIG_IP_VS_NQ=m
 CONFIG_IP_VS_FTP=m
+CONFIG_IP_VS_PE_SIP=m
 
 ##
 ## file: net/netlabel/Kconfig
