Explicitly disable PHONET_PIPECTRLR (default)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16636 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4067,6 +4067,7 @@ CONFIG_PACKET=y
 ## file: net/phonet/Kconfig
 ##
 CONFIG_PHONET=m
+# CONFIG_PHONET_PIPECTRLR is not set
 
 ##
 ## file: net/rds/Kconfig
