--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4137,6 +4137,7 @@ CONFIG_NET_ACT_NAT=m
 CONFIG_NET_ACT_PEDIT=m
 CONFIG_NET_ACT_SIMP=m
 CONFIG_NET_ACT_SKBEDIT=m
+CONFIG_NET_ACT_CSUM=m
 CONFIG_NET_CLS_IND=y
 
 ##
