--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1666,9 +1666,11 @@ CONFIG_CAN_MCP251X=m
 ## file: drivers/net/can/sja1000/Kconfig
 ##
 CONFIG_CAN_SJA1000=m
+CONFIG_CAN_SJA1000_ISA=m
 CONFIG_CAN_EMS_PCI=m
 CONFIG_CAN_KVASER_PCI=m
 CONFIG_CAN_PLX_PCI=m
+CONFIG_CAN_TSCAN1=m
 
 ##
 ## file: drivers/net/can/usb/Kconfig
