Enable CEPH_LIB=m (selected by CEPH_FS); rename CEPH_FS_PRETTYDEBUG
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16641 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2981,7 +2981,6 @@ CONFIG_CACHEFILES=m
 ## file: fs/ceph/Kconfig
 ##
 CONFIG_CEPH_FS=m
-# CONFIG_CEPH_FS_PRETTYDEBUG is not set
 
 ##
 ## file: fs/cifs/Kconfig
@@ -3745,6 +3744,12 @@ CONFIG_BRIDGE_EBT_NFLOG=m
 CONFIG_CAN=m
 CONFIG_CAN_RAW=m
 CONFIG_CAN_BCM=m
+
+##
+## file: net/ceph/Kconfig
+##
+CONFIG_CEPH_LIB=m
+# CONFIG_CEPH_LIB_PRETTYDEBUG is not set
 
 ##
 ## file: net/dcb/Kconfig
