block: Enable BLK_DEV_RBD (Rados) as module
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16642 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -206,6 +206,7 @@ CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_ATA_OVER_ETH=m
 CONFIG_VIRTIO_BLK=m
 # CONFIG_BLK_DEV_HD is not set
+CONFIG_BLK_DEV_RBD=m
 
 ##
 ## file: drivers/block/drbd/Kconfig
