--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1388,6 +1388,7 @@ CONFIG_LPC_SCH=m
 CONFIG_MISC_DEVICES=y
 CONFIG_AD525X_DPOT=m
 CONFIG_AD525X_DPOT_I2C=m
+CONFIG_AD525X_DPOT_SPI=m
 CONFIG_SGI_IOC4=m
 CONFIG_TIFM_CORE=m
 CONFIG_TIFM_7XX1=m
@@ -1396,12 +1397,19 @@ CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SGI_XP=m
 CONFIG_SGI_GRU=m
 # CONFIG_SGI_GRU_DEBUG is not set
+CONFIG_APDS9802ALS=m
 CONFIG_ISL29003=m
+CONFIG_ISL29020=m
 CONFIG_SENSORS_TSL2550=m
+CONFIG_SENSORS_BH1780=m
+CONFIG_SENSORS_BH1770=m
+CONFIG_SENSORS_APDS990X=m
+CONFIG_HMC6352=m
 CONFIG_DS1682=m
 CONFIG_TI_DAC7512=m
 CONFIG_VMWARE_BALLOON=m
 CONFIG_RAMOOPS=m
+CONFIG_BMP085=m
 
 ##
 ## file: drivers/misc/c2port/Kconfig
