Explicitly disable PCH platform drivers
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16645 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -354,6 +354,7 @@ CONFIG_CRYPTO_DEV_PADLOCK_SHA=m
 ##
 CONFIG_DMADEVICES=y
 CONFIG_INTEL_IOATDMA=m
+# CONFIG_PCH_DMA is not set
 CONFIG_NET_DMA=y
 
 ##
