--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -340,6 +340,7 @@ CONFIG_FIREWIRE_NOSY=m
 ##
 # CONFIG_GPIOLIB is not set
 # CONFIG_DEBUG_GPIO is not set
+# CONFIG_GPIO_PCH is not set
 
 ##
 ## file: drivers/gpu/drm/Kconfig
@@ -1410,6 +1411,7 @@ CONFIG_TI_DAC7512=m
 CONFIG_VMWARE_BALLOON=m
 CONFIG_RAMOOPS=m
 CONFIG_BMP085=m
+# CONFIG_PCH_PHUB is not set
 
 ##
 ## file: drivers/misc/c2port/Kconfig
@@ -1596,6 +1598,7 @@ CONFIG_ATL1=m
 CONFIG_ATL1E=m
 CONFIG_ATL1C=m
 CONFIG_JME=m
+# CONFIG_PCH_GBE is not set
 CONFIG_NETDEV_10000=y
 CONFIG_CHELSIO_T1=m
 CONFIG_CHELSIO_T1_1G=y
@@ -1665,6 +1668,7 @@ CONFIG_CAN_VCAN=m
 CONFIG_CAN_DEV=m
 CONFIG_CAN_CALC_BITTIMING=y
 CONFIG_CAN_MCP251X=m
+# CONFIG_PCH_CAN is not set
 # CONFIG_CAN_DEBUG_DEVICES is not set
 
 ##
@@ -2340,6 +2344,7 @@ CONFIG_SPI=y
 CONFIG_SPI_BITBANG=m
 CONFIG_SPI_BUTTERFLY=m
 # CONFIG_SPI_GPIO is not set
+# CONFIG_SPI_TOPCLIFF_PCH is not set
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_DESIGNWARE is not set
 CONFIG_SPI_LM70_LLP=m
