--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2258,9 +2258,14 @@ CONFIG_BE2ISCSI=m
 CONFIG_SCSI_BNX2_ISCSI=m
 
 ##
-## file: drivers/scsi/cxgb3i/Kconfig
+## file: drivers/scsi/cxgbi/cxgb3i/Kconfig
 ##
 CONFIG_SCSI_CXGB3_ISCSI=m
+
+##
+## file: drivers/scsi/cxgbi/cxgb4i/Kconfig
+##
+CONFIG_SCSI_CXGB4_ISCSI=m
 
 ##
 ## file: drivers/scsi/device_handler/Kconfig
