--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1635,6 +1635,7 @@ CONFIG_PPP_DEFLATE=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_MPPE=m
 CONFIG_PPPOE=m
+CONFIG_PPTP=m
 CONFIG_PPPOATM=m
 CONFIG_PPPOL2TP=m
 CONFIG_SLIP=m
