Explicitly disable STMMAC_ETH (default, platform device)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16648 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1752,6 +1752,11 @@ CONFIG_SFC=m
 CONFIG_SFC_MTD=y
 
 ##
+## file: drivers/net/stmmac/Kconfig
+##
+# CONFIG_STMMAC_ETH is not set
+
+##
 ## file: drivers/net/tokenring/Kconfig
 ##
 CONFIG_TR=y
