net: Enable BNA, SMCTR, USB_NET_CX82310_ETH as modules
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16649 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1624,6 +1624,7 @@ CONFIG_TEHUTI=m
 CONFIG_BNX2X=m
 CONFIG_QLCNIC=m
 CONFIG_QLGE=m
+CONFIG_BNA=m
 CONFIG_DEFXX=m
 # CONFIG_DEFXX_MMIO is not set
 CONFIG_PPP=m
@@ -1769,6 +1770,7 @@ CONFIG_TMSPCI=m
 CONFIG_SKISA=m
 CONFIG_PROTEON=m
 CONFIG_ABYSS=m
+CONFIG_SMCTR=m
 
 ##
 ## file: drivers/net/tulip/Kconfig
@@ -1805,6 +1807,7 @@ CONFIG_USB_ARMLINUX=y
 CONFIG_USB_EPSON2888=y
 CONFIG_USB_KC2190=y
 CONFIG_USB_NET_ZAURUS=m
+CONFIG_USB_NET_CX82310_ETH=m
 CONFIG_USB_HSO=m
 CONFIG_USB_NET_INT51X1=m
 CONFIG_USB_CDC_PHONET=m
