--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -860,6 +860,7 @@ CONFIG_IR_RC5_DECODER=m
 CONFIG_IR_RC6_DECODER=m
 CONFIG_IR_JVC_DECODER=m
 CONFIG_IR_SONY_DECODER=m
+CONFIG_IR_RC5_SZ_DECODER=m
 CONFIG_IR_LIRC_CODEC=m
 CONFIG_IR_IMON=m
 CONFIG_IR_MCEUSB=m
