--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -864,6 +864,7 @@ CONFIG_IR_RC5_SZ_DECODER=m
 CONFIG_IR_LIRC_CODEC=m
 CONFIG_IR_IMON=m
 CONFIG_IR_MCEUSB=m
+# CONFIG_IR_NUVOTON is not set
 CONFIG_IR_ENE=m
 CONFIG_IR_STREAMZAP=m
 
