--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1279,6 +1279,7 @@ CONFIG_USB_PWC_INPUT_EVDEV=y
 CONFIG_VIDEO_SAA7134=m
 CONFIG_VIDEO_SAA7134_ALSA=m
 CONFIG_VIDEO_SAA7134_DVB=m
+CONFIG_VIDEO_SAA7134_RC=y
 
 ##
 ## file: drivers/media/video/saa7164/Kconfig
