DVB: Enable USB_LME2510 as module
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16654 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -943,6 +943,7 @@ CONFIG_DVB_USB_CE6230=m
 CONFIG_DVB_USB_FRIIO=m
 CONFIG_DVB_USB_EC168=m
 CONFIG_DVB_USB_AZ6027=m
+CONFIG_DVB_USB_LME2510=m
 
 ##
 ## file: drivers/media/dvb/frontends/Kconfig
