--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -484,6 +484,7 @@ CONFIG_SENSORS_LIS3LV02D=m
 ## file: drivers/i2c/Kconfig
 ##
 CONFIG_I2C_COMPAT=y
+# CONFIG_I2C_MUX is not set
 CONFIG_I2C_HELPER_AUTO=y
 
 ##
@@ -491,6 +492,8 @@ CONFIG_I2C_HELPER_AUTO=y
 ##
 CONFIG_I2C_ISCH=m
 CONFIG_I2C_NFORCE2_S4985=m
+# CONFIG_I2C_GPIO is not set
+# CONFIG_I2C_INTEL_MID is not set
 CONFIG_I2C_OCORES=m
 CONFIG_I2C_SIMTEC=m
 # CONFIG_I2C_XILINX is not set
