--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -388,6 +388,8 @@ CONFIG_HID_3M_PCT=m
 CONFIG_HID_ACRUX_FF=m
 CONFIG_HID_CANDO=m
 CONFIG_HID_ELECOM=m
+CONFIG_HID_UCLOGIC=m
+CONFIG_HID_WALTOP=m
 CONFIG_HID_PRODIKEYS=m
 CONFIG_DRAGONRISE_FF=y
 CONFIG_HID_DRAGONRISE=m
@@ -410,6 +412,7 @@ CONFIG_HID_PETALYNX=m
 CONFIG_HID_PICOLCD=m
 CONFIG_HID_ROCCAT=m
 CONFIG_HID_ROCCAT_KONE=m
+CONFIG_HID_ROCCAT_PYRA=m
 CONFIG_HID_SAMSUNG=m
 CONFIG_HID_SONY=m
 CONFIG_HID_SUNPLUS=m
