hid-logitech: Enable LOGIWII_FF
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16660 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -402,6 +402,7 @@ CONFIG_HIDRAW=y
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
 CONFIG_LOGIG940_FF=y
+CONFIG_LOGIWII_FF=y
 CONFIG_HID_MAGICMOUSE=m
 CONFIG_HID_MOSART=m
 CONFIG_HID_NTRIG=m
