--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -186,6 +186,7 @@ CONFIG_DRM_NOUVEAU=m
 CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 # CONFIG_DRM_NOUVEAU_DEBUG is not set
 CONFIG_DRM_I2C_CH7006=m
+CONFIG_DRM_I2C_SIL164=m
 
 ##
 ## file: drivers/hid/usbhid/Kconfig
