[powerpc,x86] Enable PATA_PCMCIA (Closes: #606324). Disable BLK_DEV_IDECS everywhere.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16702 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/ia64/config
+++ b/linux-2.6/debian/config/ia64/config
@@ -249,7 +249,7 @@ CONFIG_SCx200_ACB=m
 ##
 CONFIG_IDE=m
 CONFIG_IDE_GD=m
-CONFIG_BLK_DEV_IDECS=m
+# CONFIG_BLK_DEV_IDECS is not set
 CONFIG_BLK_DEV_IDECD=m
 CONFIG_BLK_DEV_IDETAPE=m
 CONFIG_IDE_GENERIC=m
