--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -170,6 +170,7 @@ CONFIG_PATA_OLDPIIX=m
 CONFIG_PATA_NETCELL=m
 CONFIG_PATA_NS87410=m
 CONFIG_PATA_NS87415=m
+CONFIG_PATA_PCMCIA=m
 CONFIG_PATA_PDC_OLD=m
 CONFIG_PATA_RZ1000=m
 CONFIG_PATA_SC1200=m
@@ -505,7 +506,7 @@ CONFIG_SCx200_ACB=m
 CONFIG_IDE=m
 # CONFIG_BLK_DEV_IDE_SATA is not set
 CONFIG_IDE_GD=m
-CONFIG_BLK_DEV_IDECS=m
+# CONFIG_BLK_DEV_IDECS is not set
 CONFIG_BLK_DEV_IDECD=m
 CONFIG_BLK_DEV_IDETAPE=m
 # CONFIG_BLK_DEV_IDEACPI is not set
