--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -79,6 +79,11 @@ CONFIG_PREP_RESIDUAL=y
 CONFIG_PROC_PREPRESIDUAL=y
 
 ##
+## file: drivers/ata/config
+##
+CONFIG_PATA_PCMCIA=m
+
+##
 ## file: drivers/atm/Kconfig
 ##
 CONFIG_ATM_DRIVERS=y
@@ -271,7 +276,7 @@ CONFIG_IDE=y
 # CONFIG_BLK_DEV_IDE_SATA is not set
 CONFIG_IDE_GD=y
 CONFIG_IDE_GD_ATA=y
-CONFIG_BLK_DEV_IDECS=m
+# CONFIG_BLK_DEV_IDECS is not set
 CONFIG_BLK_DEV_IDECD=m
 CONFIG_BLK_DEV_IDETAPE=m
 # CONFIG_IDE_GENERIC is not set
