--- a/linux-2.6/debian/config/alpha/config
+++ b/linux-2.6/debian/config/alpha/config
@@ -290,7 +290,7 @@ CONFIG_SCx200_ACB=m
 CONFIG_IDE=m
 # CONFIG_BLK_DEV_IDE_SATA is not set
 CONFIG_IDE_GD=m
-CONFIG_BLK_DEV_IDECS=m
+# CONFIG_BLK_DEV_IDECS is not set
 CONFIG_BLK_DEV_IDECD=m
 CONFIG_BLK_DEV_IDETAPE=m
 CONFIG_IDE_GENERIC=m
