--- a/linux-2.6/debian/config/hppa/config
+++ b/linux-2.6/debian/config/hppa/config
@@ -96,7 +96,7 @@ CONFIG_USB_MOUSE=m
 CONFIG_IDE=m
 # CONFIG_BLK_DEV_IDE_SATA is not set
 CONFIG_IDE_GD=m
-CONFIG_BLK_DEV_IDECS=m
+# CONFIG_BLK_DEV_IDECS is not set
 CONFIG_BLK_DEV_IDECD=m
 # CONFIG_BLK_DEV_IDETAPE is not set
 CONFIG_IDE_GENERIC=m
