--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1136,14 +1136,14 @@ CONFIG_R8187SE=m
 CONFIG_RTL8192E=m
 
 ##
-## file: drivers/staging/rtl8192su/Kconfig
-##
-CONFIG_RTL8192SU=m
-
-##
 ## file: drivers/staging/rtl8192u/Kconfig
 ##
 CONFIG_RTL8192U=m
+
+##
+## file: drivers/staging/rtl8712/Kconfig
+##
+CONFIG_R8712U=m
 
 ##
 ## file: drivers/staging/samsung-laptop/Kconfig
