debian/config: Reorder.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16865 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/armel/config
+++ b/linux-2.6/debian/config/armel/config
@@ -14,9 +14,17 @@ CONFIG_DEBUG_LL=y
 CONFIG_EARLY_PRINTK=y
 
 ##
-## file: drivers/ieee1394/Kconfig
+## file: drivers/input/misc/Kconfig
 ##
-# CONFIG_IEEE1394 is not set
+CONFIG_INPUT_MISC=y
+CONFIG_INPUT_UINPUT=m
+
+##
+## file: drivers/input/mouse/Kconfig
+##
+CONFIG_INPUT_MOUSE=y
+CONFIG_MOUSE_PS2=m
+CONFIG_MOUSE_APPLETOUCH=m
 
 ##
 ## file: drivers/net/hamradio/Kconfig
@@ -32,6 +40,11 @@ CONFIG_YAM=m
 ## file: drivers/net/wireless/ipw2x00/Kconfig
 ##
 # CONFIG_IPW2100 is not set
+
+##
+## file: drivers/parport/Kconfig
+##
+# CONFIG_PARPORT_PC is not set
 
 ##
 ## file: drivers/scsi/Kconfig
@@ -82,16 +95,7 @@ CONFIG_KERNEL_LZMA=y
 ## end choice
 
 ##
-### file: drivers/input/mouse/Kconfig
+## file: unknown
 ##
-CONFIG_INPUT_MOUSE=y
-CONFIG_MOUSE_PS2=m
-CONFIG_MOUSE_APPLETOUCH=m
+# CONFIG_IEEE1394 is not set
 
-##
-## file: drivers/input/misc/Kconfig
-##
-CONFIG_INPUT_MISC=y
-CONFIG_INPUT_UINPUT=m
-
-# CONFIG_PARPORT_PC is not set
