--- a/linux-2.6/debian/config/ia64/config
+++ b/linux-2.6/debian/config/ia64/config
@@ -3,21 +3,17 @@
 ##
 CONFIG_OPROFILE=m
 CONFIG_KPROBES=y
-CONFIG_KRETPROBES=y
 
 ##
 ## file: arch/ia64/Kconfig
 ##
-CONFIG_IA64_UNCACHED_ALLOCATOR=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_SCHED_SMT=y
 CONFIG_PERMIT_BSP_REMOVE=y
 CONFIG_NODES_SHIFT=8
-CONFIG_IA32_SUPPORT=y
 CONFIG_IA64_MCA_RECOVERY=m
 CONFIG_PERFMON=y
 CONFIG_IA64_PALINFO=m
-CONFIG_SGI_SN=y
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 CONFIG_MSPEC=m
@@ -62,18 +58,18 @@ CONFIG_PATA_CMD64X=m
 CONFIG_PATA_CS5520=m
 CONFIG_PATA_CS5530=m
 CONFIG_PATA_EFAR=m
-CONFIG_PATA_TRIFLEX=m
-CONFIG_PATA_MPIIX=m
-CONFIG_PATA_OLDPIIX=m
 CONFIG_PATA_NETCELL=m
-CONFIG_PATA_NS87410=m
 CONFIG_PATA_NS87415=m
+CONFIG_PATA_OLDPIIX=m
+CONFIG_PATA_PDC2027X=m
 CONFIG_PATA_PDC_OLD=m
 CONFIG_PATA_SC1200=m
 CONFIG_PATA_SERVERWORKS=m
-CONFIG_PATA_PDC2027X=m
 CONFIG_PATA_SIL680=m
+CONFIG_PATA_TRIFLEX=m
 CONFIG_PATA_VIA=m
+CONFIG_PATA_MPIIX=m
+CONFIG_PATA_NS87410=m
 
 ##
 ## file: drivers/block/Kconfig
@@ -218,7 +214,6 @@ CONFIG_I2C_CHARDEV=m
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
-# CONFIG_I2C_DEBUG_CHIP is not set
 
 ##
 ## file: drivers/i2c/busses/Kconfig
@@ -239,7 +234,6 @@ CONFIG_I2C_VIA=m
 CONFIG_I2C_VIAPRO=m
 CONFIG_I2C_PARPORT=m
 CONFIG_I2C_PARPORT_LIGHT=m
-CONFIG_I2C_VOODOO3=m
 CONFIG_I2C_PCA_ISA=m
 CONFIG_I2C_STUB=m
 CONFIG_SCx200_ACB=m
@@ -276,18 +270,6 @@ CONFIG_BLK_DEV_SGIIOC4=m
 # CONFIG_BLK_DEV_SLC90E66 is not set
 CONFIG_BLK_DEV_TRM290=m
 # CONFIG_BLK_DEV_VIA82CXXX is not set
-
-##
-## file: drivers/ieee1394/Kconfig
-##
-CONFIG_IEEE1394=m
-CONFIG_IEEE1394_OHCI1394=m
-CONFIG_IEEE1394_PCILYNX=m
-CONFIG_IEEE1394_SBP2=m
-CONFIG_IEEE1394_ETH1394=m
-CONFIG_IEEE1394_RAWIO=m
-CONFIG_IEEE1394_VIDEO1394=m
-CONFIG_IEEE1394_DV1394=m
 
 ##
 ## file: drivers/input/gameport/Kconfig
@@ -525,11 +507,6 @@ CONFIG_DLCI_MAX=8
 ##
 ## file: drivers/net/wireless/Kconfig
 ##
-CONFIG_WLAN_PRE80211=y
-CONFIG_STRIP=m
-CONFIG_PCMCIA_WAVELAN=m
-CONFIG_PCMCIA_NETWAVE=m
-CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
@@ -835,4 +812,24 @@ CONFIG_SND_YMFPCI=m
 ## file: sound/pci/hda/Kconfig
 ##
 CONFIG_SND_HDA_INTEL=m
+
+##
+## file: unknown
+##
+# CONFIG_I2C_DEBUG_CHIP is not set
+CONFIG_I2C_VOODOO3=m
+CONFIG_IA32_SUPPORT=y
+CONFIG_IEEE1394=m
+CONFIG_IEEE1394_DV1394=m
+CONFIG_IEEE1394_ETH1394=m
+CONFIG_IEEE1394_OHCI1394=m
+CONFIG_IEEE1394_PCILYNX=m
+CONFIG_IEEE1394_RAWIO=m
+CONFIG_IEEE1394_SBP2=m
+CONFIG_IEEE1394_VIDEO1394=m
+CONFIG_PCMCIA_NETWAVE=m
+CONFIG_PCMCIA_WAVELAN=m
+CONFIG_STRIP=m
+CONFIG_WLAN_80211=y
+CONFIG_WLAN_PRE80211=y
 
