--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -4,12 +4,10 @@
 CONFIG_OPROFILE=m
 # CONFIG_OPROFILE_EVENT_MULTIPLEX is not set
 CONFIG_KPROBES=y
-CONFIG_KRETPROBES=y
 
 ##
 ## file: arch/x86/Kconfig
 ##
-CONFIG_SPARSE_IRQ=y
 CONFIG_X86_MPPARSE=y
 # CONFIG_X86_EXTENDED_PLATFORM is not set
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
@@ -19,7 +17,6 @@ CONFIG_KVM_GUEST=y
 CONFIG_PARAVIRT=y
 # CONFIG_PARAVIRT_SPINLOCKS is not set
 # CONFIG_PARAVIRT_DEBUG is not set
-# CONFIG_NO_BOOTMEM is not set 
 # CONFIG_MEMTEST is not set
 CONFIG_HPET_TIMER=y
 CONFIG_SCHED_SMT=y
@@ -64,11 +61,6 @@ CONFIG_IA32_EMULATION=y
 CONFIG_IA32_AOUT=y
 
 ##
-## file: arch/x86/Kconfig.cpu
-##
-CONFIG_X86_PTRACE_BTS=y
-
-##
 ## file: arch/x86/Kconfig.debug
 ##
 CONFIG_STRICT_DEVMEM=y
@@ -83,6 +75,7 @@ CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_NX_TEST is not set
 # CONFIG_IOMMU_DEBUG is not set
 # CONFIG_IOMMU_STRESS is not set
+# CONFIG_X86_DECODER_SELFTEST is not set
 ## choice: IO delay type
 CONFIG_IO_DELAY_0X80=y
 # CONFIG_IO_DELAY_0XED is not set
@@ -92,7 +85,6 @@ CONFIG_IO_DELAY_0X80=y
 # CONFIG_DEBUG_BOOT_PARAMS is not set
 # CONFIG_CPA_DEBUG is not set
 CONFIG_OPTIMIZE_INLINING=y
-# CONFIG_X86_DECODER_SELFTEST is not set
 # CONFIG_DEBUG_STRICT_USER_COPY_CHECKS is not set
 
 ##
@@ -130,7 +122,6 @@ CONFIG_ACPI=y
 CONFIG_ACPI_PROCFS=y
 # CONFIG_ACPI_PROCFS_POWER is not set
 CONFIG_ACPI_POWER_METER=m
-CONFIG_ACPI_SYSFS_POWER=y
 # CONFIG_ACPI_EC_DEBUGFS is not set
 # CONFIG_ACPI_PROC_EVENT is not set
 CONFIG_ACPI_AC=m
@@ -149,6 +140,10 @@ CONFIG_ACPI_CONTAINER=m
 CONFIG_ACPI_HOTPLUG_MEMORY=m
 CONFIG_ACPI_SBS=m
 CONFIG_ACPI_HED=m
+
+##
+## file: drivers/acpi/apei/Kconfig
+##
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_GHES=m
 # CONFIG_ACPI_APEI_EINJ is not set
@@ -164,20 +159,20 @@ CONFIG_PATA_CMD64X=m
 CONFIG_PATA_CS5520=m
 CONFIG_PATA_CS5530=m
 CONFIG_PATA_EFAR=m
-CONFIG_PATA_TRIFLEX=m
-CONFIG_PATA_MPIIX=m
-CONFIG_PATA_OLDPIIX=m
 CONFIG_PATA_NETCELL=m
-CONFIG_PATA_NS87410=m
 CONFIG_PATA_NS87415=m
-CONFIG_PATA_PCMCIA=m
+CONFIG_PATA_OLDPIIX=m
+CONFIG_PATA_PDC2027X=m
 CONFIG_PATA_PDC_OLD=m
-CONFIG_PATA_RZ1000=m
 CONFIG_PATA_SC1200=m
 CONFIG_PATA_SERVERWORKS=m
-CONFIG_PATA_PDC2027X=m
 CONFIG_PATA_SIL680=m
+CONFIG_PATA_TRIFLEX=m
 CONFIG_PATA_VIA=m
+CONFIG_PATA_MPIIX=m
+CONFIG_PATA_NS87410=m
+CONFIG_PATA_PCMCIA=m
+CONFIG_PATA_RZ1000=m
 
 ##
 ## file: drivers/atm/Kconfig
@@ -418,8 +413,8 @@ CONFIG_DRM_I2C_SIL164=m
 ##
 ## file: drivers/gpu/vga/Kconfig
 ##
-CONFIG_VGA_SWITCHEROO=y
 CONFIG_VGA_ARB_MAX_GPUS=16
+CONFIG_VGA_SWITCHEROO=y
 
 ##
 ## file: drivers/hid/usbhid/Kconfig
@@ -464,7 +459,6 @@ CONFIG_SENSORS_VIA686A=m
 CONFIG_SENSORS_W83781D=m
 CONFIG_SENSORS_W83L785TS=m
 CONFIG_SENSORS_W83627HF=m
-CONFIG_SENSORS_HDAPS=m
 
 ##
 ## file: drivers/i2c/Kconfig
@@ -474,7 +468,6 @@ CONFIG_I2C_CHARDEV=m
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
-# CONFIG_I2C_DEBUG_CHIP is not set
 
 ##
 ## file: drivers/i2c/busses/Kconfig
@@ -496,7 +489,6 @@ CONFIG_I2C_VIAPRO=m
 CONFIG_I2C_SCMI=m
 CONFIG_I2C_PARPORT=m
 CONFIG_I2C_PARPORT_LIGHT=m
-CONFIG_I2C_VOODOO3=m
 CONFIG_I2C_PCA_ISA=m
 CONFIG_SCx200_ACB=m
 
@@ -541,14 +533,14 @@ CONFIG_BLK_DEV_TRM290=m
 # CONFIG_BLK_DEV_VIA82CXXX is not set
 
 ##
-## file: drivers/input/Kconfig
-##
-CONFIG_XEN_KBDDEV_FRONTEND=y
-
-##
 ## file: drivers/idle/Kconfig
 ##
 # CONFIG_INTEL_IDLE is not set
+
+##
+## file: drivers/input/Kconfig
+##
+CONFIG_XEN_KBDDEV_FRONTEND=y
 
 ##
 ## file: drivers/input/gameport/Kconfig
@@ -691,7 +683,6 @@ CONFIG_IBM_ASM=m
 CONFIG_PHANTOM=m
 CONFIG_CS5535_MFGPT=m
 CONFIG_HP_ILO=m
-CONFIG_DELL_LAPTOP=m
 
 ##
 ## file: drivers/mmc/Kconfig
@@ -918,11 +909,6 @@ CONFIG_SBNI=m
 ##
 ## file: drivers/net/wireless/Kconfig
 ##
-CONFIG_WLAN_PRE80211=y
-CONFIG_STRIP=m
-CONFIG_PCMCIA_WAVELAN=m
-CONFIG_PCMCIA_NETWAVE=m
-CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
@@ -960,13 +946,13 @@ CONFIG_HOTPLUG_PCI_SHPC=m
 ## file: drivers/pcmcia/Kconfig
 ##
 CONFIG_PCCARD=m
-# CONFIG_PCMCIA_DEBUG is not set
 CONFIG_PCMCIA=m
 CONFIG_CARDBUS=y
 CONFIG_YENTA=m
 CONFIG_PD6729=m
 CONFIG_I82092=m
 CONFIG_TCIC=m
+# CONFIG_PCMCIA_DEBUG is not set
 
 ##
 ## file: drivers/platform/x86/Kconfig
@@ -974,6 +960,7 @@ CONFIG_TCIC=m
 CONFIG_X86_PLATFORM_DEVICES=y
 CONFIG_ACER_WMI=m
 CONFIG_ACERHDF=m
+CONFIG_DELL_LAPTOP=m
 CONFIG_DELL_WMI=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_IDEAPAD_LAPTOP=m
@@ -984,11 +971,12 @@ CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
 # CONFIG_THINKPAD_ACPI_UNSAFE_LEDS is not set
 CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
+CONFIG_SENSORS_HDAPS=m
 # CONFIG_INTEL_MENLOW is not set
 CONFIG_EEEPC_LAPTOP=m
 CONFIG_EEEPC_WMI=m
-CONFIG_MSI_WMI=m
 CONFIG_ACPI_WMI=m
+CONFIG_MSI_WMI=m
 CONFIG_ACPI_ASUS=m
 CONFIG_TOPSTAR_LAPTOP=m
 CONFIG_ACPI_TOSHIBA=m
@@ -1081,10 +1069,12 @@ CONFIG_SERIAL_JSM=m
 CONFIG_SFI=y
 
 ##
-## file: drivers/staging/brcm0211/Kconfig
+## file: drivers/staging/brcm80211/Kconfig
 ##
 CONFIG_BRCM80211=m
+## choice: Broadcom IEEE802.11n driver style
 CONFIG_BRCM80211_PCI=y
+## end choice
 
 ##
 ## file: drivers/staging/comedi/Kconfig
@@ -1174,7 +1164,6 @@ CONFIG_PRISM2_USB=m
 ## file: drivers/staging/zram/Kconfig
 ##
 CONFIG_ZRAM=m
-CONFIG_ZRAM_STATS=y
 
 ##
 ## file: drivers/telephony/Kconfig
@@ -1351,6 +1340,11 @@ CONFIG_SUN_PARTITION=y
 CONFIG_EFI_PARTITION=y
 
 ##
+## file: kernel/irq/Kconfig
+##
+CONFIG_SPARSE_IRQ=y
+
+##
 ## file: kernel/power/Kconfig
 ##
 # CONFIG_PM_TRACE_RTC is not set
@@ -1516,7 +1510,17 @@ CONFIG_SND_HDA_INTEL=m
 ##
 ## file: unknown
 ##
+CONFIG_ACPI_SYSFS_POWER=y
+# CONFIG_I2C_DEBUG_CHIP is not set
+CONFIG_I2C_VOODOO3=m
 # CONFIG_KVM_TRACE is not set
 CONFIG_NUMA_MIGRATE_IRQ_DESC=y
+CONFIG_PCMCIA_NETWAVE=m
+CONFIG_PCMCIA_WAVELAN=m
+CONFIG_STRIP=m
+CONFIG_WLAN_80211=y
+CONFIG_WLAN_PRE80211=y
 # CONFIG_X86_CPU_DEBUG is not set
+CONFIG_X86_PTRACE_BTS=y
+CONFIG_ZRAM_STATS=y
 
