--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -3,14 +3,12 @@
 ##
 CONFIG_OPROFILE=m
 CONFIG_KPROBES=y
-CONFIG_KRETPROBES=y
 
 ##
 ## file: arch/powerpc/Kconfig
 ##
 # CONFIG_HOTPLUG_CPU is not set
 CONFIG_KEXEC=y
-CONFIG_PROC_DEVICETREE=y
 CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="console=ttyS0,9600 console=tty0"
 CONFIG_SECCOMP=y
@@ -79,7 +77,7 @@ CONFIG_PREP_RESIDUAL=y
 CONFIG_PROC_PREPRESIDUAL=y
 
 ##
-## file: drivers/ata/config
+## file: drivers/ata/Kconfig
 ##
 CONFIG_PATA_PCMCIA=m
 
@@ -242,7 +240,6 @@ CONFIG_I2C_CHARDEV=m
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
-# CONFIG_I2C_DEBUG_CHIP is not set
 
 ##
 ## file: drivers/i2c/busses/Kconfig
@@ -264,7 +261,6 @@ CONFIG_I2C_HYDRA=m
 CONFIG_I2C_POWERMAC=m
 CONFIG_I2C_MPC=m
 CONFIG_I2C_PARPORT_LIGHT=m
-CONFIG_I2C_VOODOO3=m
 CONFIG_I2C_PCA_ISA=m
 # CONFIG_I2C_STUB is not set
 CONFIG_SCx200_ACB=m
@@ -596,11 +592,6 @@ CONFIG_CYCLADES_SYNC=m
 ##
 ## file: drivers/net/wireless/Kconfig
 ##
-CONFIG_WLAN_PRE80211=y
-CONFIG_STRIP=m
-CONFIG_PCMCIA_WAVELAN=m
-CONFIG_PCMCIA_NETWAVE=m
-CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
 CONFIG_ATMEL=m
 # CONFIG_PCI_ATMEL is not set
@@ -625,6 +616,11 @@ CONFIG_PCI_HERMES=m
 CONFIG_PCMCIA_HERMES=m
 
 ##
+## file: drivers/of/Kconfig
+##
+CONFIG_PROC_DEVICETREE=y
+
+##
 ## file: drivers/pci/hotplug/Kconfig
 ##
 # CONFIG_HOTPLUG_PCI is not set
@@ -633,13 +629,13 @@ CONFIG_PCMCIA_HERMES=m
 ## file: drivers/pcmcia/Kconfig
 ##
 CONFIG_PCCARD=m
-# CONFIG_PCMCIA_DEBUG is not set
 CONFIG_PCMCIA=m
 CONFIG_CARDBUS=y
 CONFIG_YENTA=m
 CONFIG_PD6729=m
 CONFIG_I82092=m
 CONFIG_TCIC=m
+# CONFIG_PCMCIA_DEBUG is not set
 
 ##
 ## file: drivers/power/Kconfig
@@ -988,4 +984,15 @@ CONFIG_SND_HDA_INTEL=m
 ##
 CONFIG_SND_POWERMAC=m
 CONFIG_SND_POWERMAC_AUTO_DRC=y
+
+##
+## file: unknown
+##
+# CONFIG_I2C_DEBUG_CHIP is not set
+CONFIG_I2C_VOODOO3=m
+CONFIG_PCMCIA_NETWAVE=m
+CONFIG_PCMCIA_WAVELAN=m
+CONFIG_STRIP=m
+CONFIG_WLAN_80211=y
+CONFIG_WLAN_PRE80211=y
 
