--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -2,7 +2,6 @@
 ## file: arch/Kconfig
 ##
 CONFIG_KPROBES=y
-CONFIG_KRETPROBES=y
 
 ##
 ## file: arch/sparc/Kconfig
@@ -118,7 +117,6 @@ CONFIG_I2C_CHARDEV=m
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
-# CONFIG_I2C_DEBUG_CHIP is not set
 
 ##
 ## file: drivers/i2c/busses/Kconfig
@@ -138,7 +136,6 @@ CONFIG_I2C_CHARDEV=m
 # CONFIG_I2C_VIAPRO is not set
 CONFIG_I2C_PARPORT=m
 CONFIG_I2C_PARPORT_LIGHT=m
-# CONFIG_I2C_VOODOO3 is not set
 # CONFIG_I2C_PCA_ISA is not set
 # CONFIG_I2C_STUB is not set
 
@@ -254,14 +251,9 @@ CONFIG_VIDEO_V4L1_COMPAT=y
 # CONFIG_VIDEO_BWQCAM is not set
 # CONFIG_VIDEO_CQCAM is not set
 # CONFIG_VIDEO_W9966 is not set
-# CONFIG_VIDEO_CPIA is not set
-# CONFIG_VIDEO_SAA5246A is not set
-# CONFIG_VIDEO_SAA5249 is not set
-# CONFIG_VIDEO_STRADIS is not set
 # CONFIG_VIDEO_MXB is not set
 # CONFIG_VIDEO_HEXIUM_ORION is not set
 # CONFIG_VIDEO_HEXIUM_GEMINI is not set
-# CONFIG_VIDEO_OVCAMCHIP is not set
 
 ##
 ## file: drivers/media/video/bt8xx/Kconfig
@@ -418,6 +410,16 @@ CONFIG_SERIAL_SUNHV=y
 CONFIG_SERIAL_JSM=m
 
 ##
+## file: drivers/staging/cpia/Kconfig
+##
+# CONFIG_VIDEO_CPIA is not set
+
+##
+## file: drivers/staging/stradis/Kconfig
+##
+# CONFIG_VIDEO_STRADIS is not set
+
+##
 ## file: drivers/telephony/Kconfig
 ##
 # CONFIG_PHONE is not set
@@ -458,8 +460,8 @@ CONFIG_FB_FFB=y
 # CONFIG_FB_P9100 is not set
 # CONFIG_FB_LEO is not set
 CONFIG_FB_XVR500=y
-CONFIG_FB_XVR1000=y
 CONFIG_FB_XVR2500=y
+CONFIG_FB_XVR1000=y
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_NVIDIA is not set
 # CONFIG_FB_RIVA is not set
@@ -644,4 +646,13 @@ CONFIG_SND_MAESTRO3=m
 CONFIG_SND_SUN_AMD7930=m
 CONFIG_SND_SUN_CS4231=m
 CONFIG_SND_SUN_DBRI=m
+
+##
+## file: unknown
+##
+# CONFIG_I2C_DEBUG_CHIP is not set
+# CONFIG_I2C_VOODOO3 is not set
+# CONFIG_VIDEO_OVCAMCHIP is not set
+# CONFIG_VIDEO_SAA5246A is not set
+# CONFIG_VIDEO_SAA5249 is not set
 
