--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -6,7 +6,6 @@ CONFIG_NR_CPUS=32
 CONFIG_HOTPLUG_CPU=y
 CONFIG_MATHEMU=y
 CONFIG_COMPAT=y
-CONFIG_S390_SWITCH_AMODE=y
 CONFIG_S390_EXEC_PROTECT=y
 CONFIG_PACK_STACK=y
 # CONFIG_SMALL_STACK is not set
@@ -14,11 +13,9 @@ CONFIG_PACK_STACK=y
 # CONFIG_WARN_STACK is not set
 CONFIG_QDIO=y
 CONFIG_IPL=y
-# CONFIG_PROCESS_DEBUG is not set
 CONFIG_PFAULT=y
 # CONFIG_SHARED_KERNEL is not set
 CONFIG_CMM=y
-CONFIG_CMM_PROC=y
 CONFIG_CMM_IUCV=y
 CONFIG_APPLDATA_BASE=y
 CONFIG_APPLDATA_MEM=m
@@ -193,4 +190,11 @@ CONFIG_AFIUCV=m
 ## file: net/wanrouter/Kconfig
 ##
 # CONFIG_WAN_ROUTER is not set
+
+##
+## file: unknown
+##
+CONFIG_CMM_PROC=y
+# CONFIG_PROCESS_DEBUG is not set
+CONFIG_S390_SWITCH_AMODE=y
 
