--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -119,7 +119,7 @@ CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
 ## file: drivers/acpi/Kconfig
 ##
 CONFIG_ACPI=y
-CONFIG_ACPI_PROCFS=y
+# CONFIG_ACPI_PROCFS is not set
 # CONFIG_ACPI_PROCFS_POWER is not set
 CONFIG_ACPI_POWER_METER=m
 # CONFIG_ACPI_EC_DEBUGFS is not set
@@ -133,7 +133,6 @@ CONFIG_ACPI_DOCK=y
 CONFIG_ACPI_PROCESSOR=m
 CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
 CONFIG_ACPI_THERMAL=m
-CONFIG_ACPI_BLACKLIST_YEAR=0
 # CONFIG_ACPI_DEBUG is not set
 CONFIG_ACPI_PCI_SLOT=m
 CONFIG_ACPI_CONTAINER=m
