--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2975,7 +2975,8 @@ CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
 # CONFIG_CIFS_DEBUG2 is not set
 CONFIG_CIFS_DFS_UPCALL=y
-# CONFIG_CIFS_FSCACHE is not set
+CONFIG_CIFS_FSCACHE=y
+CONFIG_CIFS_ACL=y
 CONFIG_CIFS_EXPERIMENTAL=y
 
 ##
