explain why it's off
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16873 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/armel/config
+++ b/linux-2.6/debian/config/armel/config
@@ -44,6 +44,7 @@ CONFIG_YAM=m
 ##
 ## file: drivers/parport/Kconfig
 ##
+#. Causes lockups on ARM (see #588164)
 # CONFIG_PARPORT_PC is not set
 
 ##
