--- a/linux-2.6/debian/config/featureset-openvz/config
+++ b/linux-2.6/debian/config/featureset-openvz/config
@@ -20,6 +20,8 @@ CONFIG_BC_SWAP_ACCOUNTING=y
 CONFIG_BC_PROC=y
 # CONFIG_BC_DEBUG is not set
 
+# CONFIG_SYSFS_DEPRECATED_DYN is not set
+
 # buggy
 # CONFIG_NF_CONNTRACK_IPV6 is not set
 
