--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -395,8 +395,8 @@ CONFIG_DRM_RADEON=m
 ## choice: Intel 830M, 845G, 852GM, 855GM, 865G
 # CONFIG_DRM_I830 is not set
 CONFIG_DRM_I915=m
-# CONFIG_DRM_I915_KMS is not set
 ## end choice
+CONFIG_DRM_I915_KMS=y
 CONFIG_DRM_MGA=m
 CONFIG_DRM_SIS=m
 
