[x86] Enable VT6656, loading firmware from a separate file
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17000 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1156,6 +1156,11 @@ CONFIG_USB_IP_HOST=m
 # CONFIG_USB_IP_DEBUG_ENABLE is not set
 
 ##
+## file: drivers/staging/vt6656/Kconfig
+##
+CONFIG_VT6656=m
+
+##
 ## file: drivers/staging/wlan-ng/Kconfig
 ##
 CONFIG_PRISM2_USB=m
