--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2926,21 +2926,21 @@ CONFIG_AFS_FSCACHE=y
 ##
 ## file: fs/aufs/Kconfig
 ##
-# CONFIG_AUFS_FS=m
-# ## choice: Maximum number of branches
-# CONFIG_AUFS_BRANCH_MAX_127=y
-# # CONFIG_AUFS_BRANCH_MAX_511 is not set
-# # CONFIG_AUFS_BRANCH_MAX_1023 is not set
-# # CONFIG_AUFS_BRANCH_MAX_32767 is not set
-# ## end choice
-# # CONFIG_AUFS_HNOTIFY is not set
-# # CONFIG_AUFS_EXPORT is not set
-# # CONFIG_AUFS_RDU is not set
-# # CONFIG_AUFS_SP_IATTR is not set
-# # CONFIG_AUFS_SHWH is not set
-# # CONFIG_AUFS_BR_RAMFS is not set
-# # CONFIG_AUFS_BR_FUSE is not set
-# # CONFIG_AUFS_DEBUG is not set
+CONFIG_AUFS_FS=m
+## choice: Maximum number of branches
+CONFIG_AUFS_BRANCH_MAX_127=y
+# CONFIG_AUFS_BRANCH_MAX_511 is not set
+# CONFIG_AUFS_BRANCH_MAX_1023 is not set
+# CONFIG_AUFS_BRANCH_MAX_32767 is not set
+## end choice
+# CONFIG_AUFS_HNOTIFY is not set
+# CONFIG_AUFS_EXPORT is not set
+# CONFIG_AUFS_RDU is not set
+# CONFIG_AUFS_SP_IATTR is not set
+# CONFIG_AUFS_SHWH is not set
+# CONFIG_AUFS_BR_RAMFS is not set
+# CONFIG_AUFS_BR_FUSE is not set
+# CONFIG_AUFS_DEBUG is not set
 
 ##
 ## file: fs/autofs4/Kconfig
