--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -753,38 +753,38 @@ CONFIG_FB_CIRRUS=m
 # CONFIG_FB_PM2 is not set
 # CONFIG_FB_CYBER2000 is not set
 CONFIG_FB_OF=y
-CONFIG_FB_CT65550=m
+CONFIG_FB_CT65550=y
 # CONFIG_FB_ASILIANT is not set
-CONFIG_FB_VGA16=y
+# CONFIG_FB_VGA16 is not set
 CONFIG_FB_S1D13XXX=m
-CONFIG_FB_NVIDIA=m
+CONFIG_FB_NVIDIA=y
 CONFIG_FB_NVIDIA_I2C=y
 # CONFIG_FB_RIVA is not set
 # CONFIG_FB_RIVA_I2C is not set
 # CONFIG_FB_RIVA_DEBUG is not set
-CONFIG_FB_MATROX=m
+CONFIG_FB_MATROX=y
 CONFIG_FB_MATROX_MILLENIUM=y
 CONFIG_FB_MATROX_MYSTIQUE=y
 CONFIG_FB_MATROX_G=y
 CONFIG_FB_MATROX_I2C=m
 CONFIG_FB_MATROX_MAVEN=m
-CONFIG_FB_RADEON=m
+CONFIG_FB_RADEON=y
 CONFIG_FB_RADEON_I2C=y
 # CONFIG_FB_RADEON_DEBUG is not set
-CONFIG_FB_ATY128=m
-CONFIG_FB_ATY=m
+CONFIG_FB_ATY128=y
+CONFIG_FB_ATY=y
 CONFIG_FB_ATY_CT=y
 CONFIG_FB_ATY_GENERIC_LCD=y
 CONFIG_FB_ATY_GX=y
 CONFIG_FB_SAVAGE=m
 CONFIG_FB_SAVAGE_I2C=y
 CONFIG_FB_SAVAGE_ACCEL=y
-CONFIG_FB_SIS=m
+CONFIG_FB_SIS=y
 CONFIG_FB_SIS_300=y
 CONFIG_FB_SIS_315=y
 CONFIG_FB_NEOMAGIC=m
 CONFIG_FB_KYRO=m
-CONFIG_FB_3DFX=m
+CONFIG_FB_3DFX=y
 CONFIG_FB_VOODOO1=y
 CONFIG_FB_TRIDENT=m
 CONFIG_FB_IBM_GXT4500=m
