--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1675,6 +1675,7 @@ CONFIG_BE2NET=m
 ## file: drivers/net/can/Kconfig
 ##
 CONFIG_CAN_VCAN=m
+CONFIG_CAN_SLCAN=m
 CONFIG_CAN_DEV=m
 CONFIG_CAN_CALC_BITTIMING=y
 CONFIG_CAN_MCP251X=m
