sound: Enable SND_ALOOP as module (Closes: #617869)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17059 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4288,6 +4288,7 @@ CONFIG_SND_VERBOSE_PROCFS=y
 ##
 CONFIG_SND_DRIVERS=y
 CONFIG_SND_PCSP=m
+CONFIG_SND_ALOOP=m
 CONFIG_SND_MTS64=m
 CONFIG_SND_PORTMAN2X4=m
 CONFIG_SND_AC97_POWER_SAVE=y
