Remove the Big Kernel Lock:
adfs,appletalk,i810,ufs,usbip: Refactor locking
hpfs: Disable HPFS_FS


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17064 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3109,7 +3109,7 @@ CONFIG_HFSPLUS_FS=m
 ##
 ## file: fs/hpfs/Kconfig
 ##
-CONFIG_HPFS_FS=m
+# CONFIG_HPFS_FS is not set
 
 ##
 ## file: fs/isofs/Kconfig
@@ -3399,6 +3399,7 @@ CONFIG_XFS_RT=y
 ## file: init/Kconfig
 ##
 CONFIG_EXPERIMENTAL=y
+# CONFIG_LOCK_KERNEL is not set
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 ## choice: Kernel compression mode
@@ -3583,6 +3584,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_RT_MUTEX_TESTER is not set
 # CONFIG_DEBUG_SPINLOCK is not set
 # CONFIG_DEBUG_MUTEXES is not set
+# CONFIG_BKL is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
