enable modular ASUS_WMI and ASUS_NB_WMI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17321 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -981,6 +981,8 @@ CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 CONFIG_SENSORS_HDAPS=m
 # CONFIG_INTEL_MENLOW is not set
 CONFIG_EEEPC_LAPTOP=m
+CONFIG_ASUS_WMI=m
+CONFIG_ASUS_NB_WMI=m
 CONFIG_EEEPC_WMI=m
 CONFIG_ACPI_WMI=m
 CONFIG_MSI_WMI=m
