x86: enable more laptop goodies
while at it notch other new ones, looking fwd to an INTEL_IPS usage.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17322 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -969,6 +969,8 @@ CONFIG_ACER_WMI=m
 CONFIG_ACERHDF=m
 CONFIG_DELL_LAPTOP=m
 CONFIG_DELL_WMI=m
+CONFIG_DELL_WMI_AIO=m
+CONFIG_HP_ACCEL=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_IDEAPAD_LAPTOP=m
 CONFIG_THINKPAD_ACPI=m
@@ -991,6 +993,7 @@ CONFIG_TOPSTAR_LAPTOP=m
 CONFIG_ACPI_TOSHIBA=m
 CONFIG_TOSHIBA_BT_RFKILL=m
 CONFIG_ACPI_CMPC=m
+CONFIG_INTEL_IPS=m
 
 ##
 ## file: drivers/pnp/Kconfig
