x86 enable modular ACPI_IPMI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17324 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -133,6 +133,7 @@ CONFIG_ACPI_FAN=m
 CONFIG_ACPI_DOCK=y
 CONFIG_ACPI_PROCESSOR=m
 CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
+CONFIG_ACPI_IPMI=m
 CONFIG_ACPI_THERMAL=m
 # CONFIG_ACPI_DEBUG is not set
 CONFIG_ACPI_PCI_SLOT=m
